--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,9 +1,18 @@
 # Where are jsp files? HERE!
 spring.mvc.view.prefix=/WEB-INF/
 # Data Persistence
-spring.datasource.url=jdbc:mysql://localhost:3306/<<YOUR_SCHEMA_NAME>>
+spring.datasource.url=jdbc:mysql://localhost:3306/billreminder
 spring.datasource.username=root
 spring.datasource.password=root
-spring.datasource.driver-class-name=com.mysql.jdbc.Driverspring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
 # For Update and Delete method hidden inputs
 spring.mvc.hiddenmethod.filter.enabled=true
+
+#//set Spring Smtp for Gmail account
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=javatestmailsender@gmail.com
+#spring.mail.password=jgmygoknadzknwjd
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
