add delete/update/create/email message

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.jpa.hibernate.ddl-auto=update
 # For Update and Delete method hidden inputs
 spring.mvc.hiddenmethod.filter.enabled=true
 
-#//set Spring Smtp for Gmail account
-#spring.mail.host=smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=javatestmailsender@gmail.com
-#spring.mail.password=jgmygoknadzknwjd
-#spring.mail.properties.mail.smtp.auth=true
-#spring.mail.properties.mail.smtp.starttls.enable=true
+#set Spring Smtp for Gmail account
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=javatestmailsender@gmail.com
+spring.mail.password=jgmygoknadzknwjd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
